--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.5"
+    "react-native": "0.59.5",
+    "react-router-native": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
