--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/slider": "^1.0.4",
     "lodash": "^4.17.11",
     "react": "16.8.3",
     "react-native": "0.59.5",
