--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "lodash": "^4.17.11",
     "react": "16.8.3",
     "react-native": "0.59.5",
-    "react-router-native": "^5.0.0"
+    "react-redux": "^7.0.2",
+    "react-router-native": "^5.0.0",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
