--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^7.0.2",
     "react-router-native": "^5.0.0",
     "redux": "^4.0.1",
+    "redux-form": "^8.2.0",
     "redux-logger": "^3.0.6"
   },
   "devDependencies": {
