--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-router-native": "^5.0.0",
     "redux": "^4.0.1",
     "redux-form": "^8.2.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-observable": "^1.1.0",
+    "rxjs": "^6.4.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
