--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@react-native-community/slider": "^1.0.4",
     "lodash": "^4.17.11",
+    "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-redux": "^7.0.2",
